<resources>
    <string name="app_name">EShop_Admin</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="try_again">Try Again</string>
    <string name="your_internet_is_not_connected_please_check_your_internet_connection">Your Internet is not Connected. Please Check Your Internet Connection!!</string>
    <string name="username_edittext_hint">UserName</string>
    <string name="pass_edittext_hint">Password</string>
    <string name="login">Login</string>
    <string name="hello_admin_please_log_in">Hello Admin, Please Log In</string>
    <string name="hello_admin">Hello, Admin</string>
    <string name="shops_registered">Shop\'s Registered</string>
    <string name="logout">Logout</string>
    <string name="set_tax_gst">Set tax gst</string>
    <string name="show_charges_paid">Show Charges Paid</string>
    <string name="display_bill">Display Bill</string>
    <string name="activate">Activate</string>
    <string name="deactivate">De - Activate</string>
    <string name="enter_gst_in_percentage_eg_18">Enter gst in %. eg 18</string>
    <string name="gst_tax">GST/TAX :</string>
    <string name="set_charges">Set Charges</string>
    <string name="charges">Charges</string>
    <string name="enter_ammount_in_rs_eg_10">Enter amount eg. 10</string>
    <string name="product">Product</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="cause">Cause</string>
    <string name="bill">Bill</string>
    <string name="refresh">Refresh</string>
</resources>