<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:id="@+id/no_internet_layout"
    android:background="@drawable/internet_drawable"
    android:layout_marginStart="40dp"
    android:layout_marginEnd="40dp"
    android:elevation="4dp">

    <ImageView
        android:id="@+id/img_no_internet"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_no_internet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/txt_no_internet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/no_internet_connection"
        android:textSize="28sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/img_no_internet"
        app:layout_constraintStart_toStartOf="@id/img_no_internet"
        app:layout_constraintTop_toBottomOf="@id/img_no_internet" />

    <TextView
        android:id="@+id/txt_desc_no_internet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/your_internet_is_not_connected_please_check_your_internet_connection"
        android:textColor="#91000000"
        android:textSize="17sp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@id/txt_no_internet"
        app:layout_constraintStart_toStartOf="@id/txt_no_internet"
        app:layout_constraintTop_toBottomOf="@id/txt_no_internet" />

    <TextView
        android:id="@+id/txt_try_again"
        android:layout_width="314dp"
        android:layout_height="70dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/internet_drawable"
        android:backgroundTint="#0D97C3"
        android:gravity="center"
        android:text="@string/try_again"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/txt_desc_no_internet"
        app:layout_constraintStart_toStartOf="@id/txt_desc_no_internet"
        app:layout_constraintTop_toBottomOf="@id/txt_desc_no_internet" />


</androidx.constraintlayout.widget.ConstraintLayout>