<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Shop_Admin">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/frm_layout_height"
                android:layout_marginBottom="80dp"
                android:background="@drawable/blue_bg">

                <ImageView
                    android:layout_width="@dimen/img_view"
                    android:layout_height="@dimen/img_view"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/img_layout_top_margin"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/shoplogo" />
            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/hello_admin_please_log_in"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="62dp"
                android:layout_marginTop="36.7dp"
                android:layout_marginEnd="62dp"
                android:background="@drawable/blue_border_rounded_cornwe"
                android:gravity="center">

                <EditText
                    android:id="@+id/username_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/username_icon"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/username_edittext_hint"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:paddingStart="17dp"
                    android:paddingTop="15dp"
                    android:paddingEnd="5dp"
                    android:paddingBottom="15dp"
                    android:textCursorDrawable="@drawable/cursor_color"
                    android:textSize="12sp" />

                <ImageView
                    android:id="@+id/username_icon"
                    android:layout_width="14.7dp"
                    android:layout_height="10.3dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="17dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_user" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="62dp"
                android:layout_marginTop="12.7dp"
                android:layout_marginEnd="62dp"
                android:background="@drawable/blue_border_rounded_cornwe"
                android:gravity="center">

                <EditText
                    android:id="@+id/pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/icon"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/pass_edittext_hint"
                    android:inputType="textPassword"
                    android:maxLength="10"
                    android:maxLines="1"
                    android:paddingStart="17dp"
                    android:paddingTop="15dp"
                    android:paddingEnd="5dp"
                    android:paddingBottom="15dp"
                    android:textCursorDrawable="@drawable/cursor_color"
                    android:textSize="12sp" />

                <ImageView
                    android:id="@+id/icon"
                    android:layout_width="14.7dp"
                    android:layout_height="10.3dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="17dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/password" />

            </RelativeLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="62dp"
                android:layout_marginTop="18.7dp"
                android:layout_marginRight="62dp"
                android:background="@drawable/blue_fill__rounded_color"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:paddingTop="14dp"
                android:paddingBottom="14dp"
                android:text="@string/login"
                android:textColor="#FFFFFF"
                android:textSize="12sp" />
        </LinearLayout>

    </ScrollView>

</RelativeLayout>