<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShopDetails">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="15dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="50dp"
            app:cardElevation="50dp"
            app:cardCornerRadius="25dp"
            android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/sname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:padding="5dp"/>

            <TextView
                android:id="@+id/scat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:padding="5dp"/>



            <TextView
                android:id="@+id/oname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_margin="8dp"
                android:padding="5dp"/>

            <TextView
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_margin="8dp"
                android:padding="5dp"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:layout_margin="8dp"
                    android:padding="5dp"
                    android:layout_gravity="start"/>

                <TextView
                    android:id="@+id/activate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:layout_margin="8dp"
                    android:padding="8dp"
                    android:layout_gravity="end"
                    android:background="@drawable/blue_fill__rounded_color"
                    android:visibility="gone"
                    android:text="@string/activate"/>

                <TextView
                    android:id="@+id/deactivate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:layout_margin="8dp"
                    android:padding="8dp"
                    android:layout_gravity="end"
                    android:background="@drawable/blue_fill__rounded_color"
                    android:visibility="gone"
                    android:text="@string/deactivate"/>
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/gst"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:layout_margin="8dp"
                    android:padding="5dp"
                    android:layout_gravity="start"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/set_gst"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/set_tax_gst"
                    android:padding="5dp"
                    android:background="@drawable/blue_border_rounded_cornwe"
                    android:backgroundTint="#F57C00"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:textColor="@color/white"
                    android:layout_gravity="end"/>

            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/charge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:layout_margin="8dp"
                    android:padding="5dp"
                    android:layout_gravity="start"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/set_charges"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/set_charges"
                    android:padding="5dp"
                    android:background="@drawable/blue_border_rounded_cornwe"
                    android:backgroundTint="#FFA000"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:layout_gravity="end"/>

            </FrameLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/charges"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show_charges_paid"
                android:padding="5dp"
                android:layout_margin="5dp"
                android:layout_gravity="center"
                android:background="@drawable/blue_fill__rounded_color"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bill"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/display_bill"
                android:padding="5dp"
                android:layout_margin="5dp"
                android:layout_gravity="center"
                android:background="@drawable/blue_border_rounded_cornwe"
                android:backgroundTint="#FBC02D"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

        </LinearLayout>

        </androidx.cardview.widget.CardView>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>